Feat: wallet-service — WalletCommandConsumer Saga + tests