@@ -18,40 +18,38 @@ public class DomainWalletValidator implements Validator<DomainWallet> {
             throw new DomainValidationException(errors);
         }
 
-        if (wallet.getCustomerId() == null) {
+        if (wallet.getCustomerId() == null)
             errors.put("customerId", "Le customerId est obligatoire");
-        }
 
-        if (wallet.getCurrency() == null || wallet.getCurrency().trim().isEmpty()) {
+        if (wallet.getWalletType() == null)
+            errors.put("walletType", "Le type de wallet est obligatoire");
+
+        if (wallet.getWalletNumber() == null || wallet.getWalletNumber().isBlank())
+            errors.put("walletNumber", "Le numero de wallet est obligatoire");
+
+        if (wallet.getCurrency() == null || wallet.getCurrency().isBlank())
             errors.put("currency", "La devise est obligatoire");
-        } else if (wallet.getCurrency().trim().length() != 3) {
+        else if (wallet.getCurrency().trim().length() != 3)
             errors.put("currency", "La devise doit comporter exactement 3 caracteres (ex: XOF)");
-        }
 
-        if (wallet.getBalance() == null) {
+        if (wallet.getBalance() == null)
             errors.put("balance", "Le solde est obligatoire");
-        } else if (wallet.getBalance().compareTo(BigDecimal.ZERO) < 0) {
+        else if (wallet.getBalance().compareTo(BigDecimal.ZERO) < 0)
             errors.put("balance", "Le solde ne peut pas etre negatif");
-        }
 
-        if (wallet.getFrozenAmount() == null) {
+        if (wallet.getFrozenAmount() == null)
             errors.put("frozenAmount", "Le montant gele est obligatoire");
-        } else if (wallet.getFrozenAmount().compareTo(BigDecimal.ZERO) < 0) {
+        else if (wallet.getFrozenAmount().compareTo(BigDecimal.ZERO) < 0)
             errors.put("frozenAmount", "Le montant gele ne peut pas etre negatif");
-        }
 
-        if (wallet.getBalance() != null && wallet.getFrozenAmount() != null) {
-            if (wallet.getFrozenAmount().compareTo(wallet.getBalance()) > 0) {
+        if (wallet.getBalance() != null && wallet.getFrozenAmount() != null)
+            if (wallet.getFrozenAmount().compareTo(wallet.getBalance()) > 0)
                 errors.put("frozenAmount", "Le montant gele ne peut pas depasser le solde");
-            }
-        }
 
-        if (wallet.getStatus() == null) {
+        if (wallet.getStatus() == null)
             errors.put("status", "Le statut du wallet est obligatoire");
-        }
 
-        if (!errors.isEmpty()) {
+        if (!errors.isEmpty())
             throw new DomainValidationException(errors);
-        }
     }
 }
